kubeless/manifests/demo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sts
  namespace: demo
  labels:
    app: nginx
    type: statefulset
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginx
    type: statefulset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: demo
spec:
  selector:
    matchLabels:
      app: nginx # has to match .spec.template.metadata.labels
  serviceName: "nginx"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: nginx # has to match .spec.selector.matchLabels
        type: statefulset
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
      volumes:
      - name: www
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: nginx-sts
  namespace: demo
spec:
  rules:
  - host: demo-sts.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-deploy
          servicePort: 80
        path: /deployment
      - backend:
          serviceName: nginx-sts
          servicePort: 80
        path: /statefulset
  tls:
  - hosts:
    - demo-sts.example.com
    secretName: nginx-sts-prod-cert
